opam-version: "2.0"

synopsis: "Bisect_ppx CI and coverage service integrations testing"
homepage: "https://github.com/aantron/bisect-ci-integration-megatest"
bug-reports: "https://github.com/aantron/bisect_ppx/issues"
authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

depends: [
  "bisect_ppx" {dev & >= "2.5.0"}
  "dune" {>= "2.7.0"}
  "ocaml"
]

pin-depends: [
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git"]
]
